force-app/main/default/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Constituent Concern Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Pending at Agency</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending at Department</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Correspondence Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Pending at Agency</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GOAR Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved By CalSTA%3B Pending At GO</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>GO Approved%3B CalSTA Action Pending</fullName>
        </values>
        <values>
            <fullName>GO Approved%3B Completed</fullName>
        </values>
        <values>
            <fullName>GO Denied%3B Completed</fullName>
        </values>
        <values>
            <fullName>Pending at Agency</fullName>
        </values>
        <values>
            <fullName>Pending at Department for Revision</fullName>
        </values>
        <values>
            <fullName>Pending at GO</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Gold Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved By CalSTA%3B Pending At GO</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>GO Approved%3B CalSTA Action Pending</fullName>
        </values>
        <values>
            <fullName>GO Approved%3B Completed</fullName>
        </values>
        <values>
            <fullName>GO Denied%3B CalSTA Action Pending</fullName>
        </values>
        <values>
            <fullName>GO Denied%3B Completed</fullName>
        </values>
        <values>
            <fullName>Pending at Agency</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending at Department for Revision</fullName>
        </values>
        <values>
            <fullName>Pending at GO</fullName>
        </values>
        <values>
            <fullName>Pending at GO - Cabinet</fullName>
        </values>
        <values>
            <fullName>Pending at GO - Communications</fullName>
        </values>
        <values>
            <fullName>Pending at GO - DOF</fullName>
        </values>
        <values>
            <fullName>Pending at GO - Legal</fullName>
        </values>
        <values>
            <fullName>Pending at GO - Legislative</fullName>
        </values>
        <values>
            <fullName>Returned from Governor%E2%80%99s Office</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Goldenrod Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Pending at Agency</fullName>
        </values>
        <values>
            <fullName>Pending at Department</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Returned from Governor%E2%80%99s Office</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IM Legislative Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending at Agency</fullName>
        </values>
        <values>
            <fullName>Pending at Department for Revision</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IM NCB Others General PAL SupportProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending at Agency</fullName>
        </values>
        <values>
            <fullName>Pending at Department for Revision</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IM Rule Making Audit Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>GO Approved%3B CalSTA Action Pending</fullName>
        </values>
        <values>
            <fullName>GO Approved%3B Completed</fullName>
        </values>
        <values>
            <fullName>GO Denied%3B Completed</fullName>
        </values>
        <values>
            <fullName>Pending at Agency</fullName>
        </values>
        <values>
            <fullName>Pending at Department for Revision</fullName>
        </values>
        <values>
            <fullName>Pending at GO</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Issue Memo Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>GO Approved%3B CalSTA Action Pending</fullName>
        </values>
        <values>
            <fullName>GO Approved%3B Completed</fullName>
        </values>
        <values>
            <fullName>GO Denied%3B Completed</fullName>
        </values>
        <values>
            <fullName>Pending at Agency</fullName>
        </values>
        <values>
            <fullName>Pending at Department for Revision</fullName>
        </values>
        <values>
            <fullName>Pending at GO</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Action_requested__c</fullName>
        <label>Action Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>For Information Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approve_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Secretory Approval</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Reply from Approver 2</fullName>
                    <isActive>false</isActive>
                    <label>Reply from Approver 2</label>
                </value>
                <value>
                    <fullName>Request for Approver 1</fullName>
                    <isActive>false</isActive>
                    <label>Request for Approver 1</label>
                </value>
                <value>
                    <fullName>Request from Approver1 to Approver 2</fullName>
                    <isActive>false</isActive>
                    <label>Request from Approver1 to Approver 2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approvers__c</fullName>
        <label>Approvers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfidentialSubmitter__c</fullName>
        <label>ConfidentialSubmitter</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential_Formula__c</fullName>
        <formula>IF(
 Confidential__c , 
&quot;Confidential Request: &quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confidential Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To flag request as confidential</description>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constituent_Address__c</fullName>
        <label>Constituent Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Constituent_Email__c</fullName>
        <label>Constituent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Constituent_Name__c</fullName>
        <label>Constituent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent_Phone__c</fullName>
        <label>Constituent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Constituent_s_Issue_Concern__c</fullName>
        <label>Constituent&apos;s Issue/Concern</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_CalSTA_Received_from_GO__c</fullName>
        <label>Date CalSTA Received from GO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <description>Created Date</description>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <inlineHelpText>Click the calendar icon to select a date or enter using the format mm/dd/yyyy</inlineHelpText>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_to_CALSTA__c</fullName>
        <label>Date Due to CalSTA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_to_Eventual_Recipient__c</fullName>
        <inlineHelpText>Click the calendar icon to select a date or enter using the format mm/dd/yyyy</inlineHelpText>
        <label>Date Due to Eventual Recipient</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_to_the_GO__c</fullName>
        <label>Date Due to the GO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_by_CalSTA__c</fullName>
        <inlineHelpText>Click the calendar icon to select a date or enter using the format mm/dd/yyyy</inlineHelpText>
        <label>Date Received by CalSTA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Revision_Due_Back_From_Dept__c</fullName>
        <inlineHelpText>Click the calendar icon to select a date or enter using the format mm/dd/yyyy</inlineHelpText>
        <label>Date Revision Due Back From Dept</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Correspondence__c</fullName>
        <label>Date of Correspondence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Goldenrod__c</fullName>
        <inlineHelpText>Click the calendar icon to select a date or enter using the format mm/dd/yyyy</inlineHelpText>
        <label>Date of Goldenrod</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_IM__c</fullName>
        <inlineHelpText>Click the calendar icon to select a date or enter using the format mm/dd/yyyy</inlineHelpText>
        <label>Date of IM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Transmittal__c</fullName>
        <label>Date of Transmittal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_status_updated_by_GO__c</fullName>
        <inlineHelpText>Click the calendar icon to select a date or enter using the format mm/dd/yyyy</inlineHelpText>
        <label>Date status updated by GO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <formula>IF( Request_Due_Date__c &lt; TODAY(), 

CASE(MOD( Request_Due_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( TODAY()-Request_Due_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( TODAY()-Request_Due_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( TODAY()-Request_Due_Date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( TODAY()-Request_Due_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( TODAY()-Request_Due_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( TODAY()-Request_Due_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( TODAY()-Request_Due_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TODAY() - Request_Due_Date__c )/7)*5)-1

,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_overdue_to_Eventual_Recipient__c</fullName>
        <formula>IF( Due_Date_to_Eventual_Recipient__c &lt; TODAY(),
CASE(MOD(Due_Date_to_Eventual_Recipient__c  - DATE(1985,6,24),7), 0 , 
CASE( MOD( Today() - Due_Date_to_Eventual_Recipient__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1, 
CASE( MOD( Today() - Due_Date_to_Eventual_Recipient__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2, 
CASE( MOD( Today() - Due_Date_to_Eventual_Recipient__c  ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3, 
CASE( MOD( Today() - Due_Date_to_Eventual_Recipient__c  ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( Today() - Due_Date_to_Eventual_Recipient__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( Today() - Due_Date_to_Eventual_Recipient__c  ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( Today() - Due_Date_to_Eventual_Recipient__c  ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),999) 
  + 
(FLOOR(( Today() - Due_Date_to_Eventual_Recipient__c )/7)*5)-1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days overdue to Eventual Recipient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delegated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliver_this_revised_version_directly_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliver this revised version directly to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <label>DepartmentName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Sent_To_Name__c</fullName>
        <label>Department Sent To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Sent_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department Sent To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_to_Eventual_Recipient__c</fullName>
        <label>Due Date to Eventual Recipient</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eventual_Recipient__c</fullName>
        <label>Eventual Recipient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legislature</fullName>
                </value>
                <value>
                    <fullName>CA Supreme Court</fullName>
                </value>
                <value>
                    <fullName>CA Court of Appeal</fullName>
                </value>
                <value>
                    <fullName>Office of Administrative Law</fullName>
                </value>
                <value>
                    <fullName>Bureau of State Audits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eventual_recipient_if_differ_than_above__c</fullName>
        <inlineHelpText>Eventual recipient if different than above</inlineHelpText>
        <label>Recipient if different than above</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Formula__c</fullName>
        <formula>IF(
  Expedite__c ,
&quot;Expedite: &quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expedite Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Reason__c</fullName>
        <description>Reason for Expedite</description>
        <label>Expedite Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark if the request is urgent or not.</description>
        <label>Expedite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GOAR_Due_Date__c</fullName>
        <label>GOAR Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GO_Tracking_Number__c</fullName>
        <label>GO Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Due_Date__c</fullName>
        <label>IM Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_PAL_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IM PAL Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IM_PAL_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IM_PAL_IT_Undersecretary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IM PAL/IT - Undersecretary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initially_Due_To__c</fullName>
        <label>Initially Due To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Governor’s Office</fullName>
                </value>
                <value>
                    <fullName>Bureau of State Audits</fullName>
                </value>
                <value>
                    <fullName>Department of Finance</fullName>
                </value>
                <value>
                    <fullName>Department of General Services</fullName>
                </value>
                <value>
                    <fullName>Department for Rulemaking Process</fullName>
                </value>
                <value>
                    <fullName>Office of Administrative Law</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instructions_to_the_Department__c</fullName>
        <description>Instructions to Department</description>
        <label>Instructions to Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reply direct and furnish to CalSTA with copies</fullName>
                </value>
                <value>
                    <fullName>Prepare for signature of return with the attached</fullName>
                </value>
                <value>
                    <fullName>Notify CalSTA of action taken</fullName>
                </value>
                <value>
                    <fullName>Handle as indicated above (return all suggested replies to CalSTA)</fullName>
                </value>
                <value>
                    <fullName>Reply direct and furnish GO and CalSTA with copies</fullName>
                    <isActive>false</isActive>
                    <label>Reply direct and furnish GO and CalSTA with copies</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsLoggedInUser__c</fullName>
        <formula>IF(
CONTAINS(Reviewer__c,$User.FirstName + &apos; &apos;+ $User.LastName),&quot;1&quot;,&quot;0&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLoggedInUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Memo_Type__c</fullName>
        <label>Issue Memo Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IT PAL</fullName>
                    <label>IT-PAL</label>
                </value>
                <value>
                    <fullName>IT Procurement</fullName>
                    <label>IT-Procurement</label>
                </value>
                <value>
                    <fullName>IT Miscellaneous</fullName>
                    <label>IT-Miscellaneous</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Delegated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Delegated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Overdue__c</fullName>
        <formula>IF ( Date_Due_to_CALSTA__c &lt; TODAY(),

CASE(MOD( Date_Due_to_CALSTA__c  - DATE(1985,6,24),7), 
0 , CASE( MOD( Today() - Date_Due_to_CALSTA__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Today() - Date_Due_to_CALSTA__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Today() - Date_Due_to_CALSTA__c  ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Today() - Date_Due_to_CALSTA__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Today() - Date_Due_to_CALSTA__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Today() - Date_Due_to_CALSTA__c  ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Today() - Date_Due_to_CALSTA__c  ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Today() - Date_Due_to_CALSTA__c )/7)*5)-1
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_from_the_GO_on__c</fullName>
        <label>Received from the GO on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <label>Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_IM_PAL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related IM-PAL</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Issue Memorandum (PAL)</value>
            </filterItems>
            <filterItems>
                <field>Case.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related IM PAL Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Red_Flag_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related to Red Flag Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Due_Date__c</fullName>
        <inlineHelpText>Click the calendar icon to select a date or enter using the format mm/dd/yyyy</inlineHelpText>
        <label>Request Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed_Comment_History__c</fullName>
        <label>Reviewed Comment History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <description>Reviewer is the field where we need to retrieve reviewer in approval process</description>
        <label>Reviewer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_of_Previous_version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revision of Previous version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_Duplicate_Correspondence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted Duplicate Correspondence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_to_the_GO_On__c</fullName>
        <label>Submitted to the GO on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <externalId>true</externalId>
        <label>CALSTA Tracking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmitting_Mandated_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transmitting Mandated Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Under_review_or_being_processed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Under review or being processed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserTest</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_Deputy_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>addReviewers__c</fullName>
        <label>addReviewers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>forwadedReviewers__c</fullName>
        <label>forwadedReviewers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>Expedite__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Tracking_Number__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Reviewer__c</columns>
        <columns>Request_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Pending at Agency,Pending at Department for Revision,Pending at GO,GO Approved; CalSTA Action Pending,GO Approved; Completed,GO Denied; Completed,Pending at Department,Approved By CalSTA; Pending At GO</value>
        </filters>
        <label>All Open Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Pending_Requests_at_Agency</fullName>
        <columns>Expedite__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Tracking_Number__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Reviewer__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Days_Overdue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Pending at Agency</value>
        </filters>
        <label>All Pending Requests at Agency</label>
    </listViews>
    <listViews>
        <fullName>Approver_Queue_1_Case</fullName>
        <columns>Expedite__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Tracking_Number__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Date_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reviewer__c</field>
            <operation>equals</operation>
            <value>Approver Queue 1</value>
        </filters>
        <label>Approval - Undersecretary</label>
        <sharedTo>
            <group>Agency_user</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approver_Queue_2_Case</fullName>
        <columns>Expedite__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Tracking_Number__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Date_Received__c</columns>
        <columns>Request_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reviewer__c</field>
            <operation>equals</operation>
            <value>Approver Queue 2</value>
        </filters>
        <label>Approval - Secretary</label>
        <sharedTo>
            <group>Agency_user</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approver_Queue_IMPAL_Case</fullName>
        <columns>Expedite__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Tracking_Number__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Issue_Memo_Type__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Date_of_IM__c</columns>
        <columns>Request_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reviewer__c</field>
            <operation>equals</operation>
            <value>Approver Queue-IM PAL/IT</value>
        </filters>
        <label>Approval - IM PAL/IT</label>
        <sharedTo>
            <group>Agency_user</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Confidential_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Approve_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Confidential__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Confidential Requests</label>
        <sharedTo>
            <group>Confidential_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConstituentConcern_Requests</fullName>
        <columns>Expedite__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Tracking_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Date_Created__c</columns>
        <columns>Date_Due_to_CALSTA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CC</value>
        </filters>
        <label>Constituent Concern Requests</label>
    </listViews>
</CustomObject>